CMakePM: Fix presets with macros in CMAKE_BUILD_TYPE

Fixes: QTCREATORBUG-28893
Change-Id: Ifc4927a31c6a30c3c8ab083d8724207202c75aa1
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>